# HiRezBrainPET_git

./: .gitignore  README.md
BPET_castor_results/: runmpi_2024Derenzo_win1.bat  things2do.md
BPET_castor_results/Release/: data_conversion_to_castor.bat  lut_compiler.bat  txt_id_conversion.bat  txt_id_conversion_oldpc.bat
BPET_castor_results/python/: Intersect_LOR.py  Intersect_combine.py  combine_files.py  load_mat.ipynb  requirements.txt
BPET_castor_v3.1.1/: CMakeLists.txt  COPYRIGHT.TXT  Makefile  castor-recon.cc
BPET_castor_v3.1.1/cmake-modules/: FindROOT.cmake
BPET_castor_v3.1.1/config/scanner/: CBCT_BENCHMARK_V2.0.geom  CBCT_VARIAN_TRUEBEAM.geom  HiRezBrainPET_rbig_Geom_orig.hscan  HiRezBrainPET_rbig_Geom_z2s.hscan  HiRezBrainPET_rmid_Geom_big_z4s.hscan  HiRezBrainPET_rmid_Geom_orig.hscan  HiRezBrainPET_rmid_Geom_z2s.hscan  HiRezBrainPET_rsmall_Geom_big.hscan  HiRezBrainPET_rsmall_Geom_big_z4s.hscan  HiRezBrainPET_rsmall_Geom_z2s_min90.hscan  PET_SIEMENS_MMR.hscan  README  RPC_HiRezBrainPET_Geom_small.lut
BPET_castor_v3.1.1/include/algorithm/: iIterativeAlgorithm.hh  iRCPGSAlgorithm.hh  oSensitivityGenerator.hh  vAlgorithm.hh
BPET_castor_v3.1.1/include/datafile/: iDataFileCT.hh  iDataFilePET.hh  iDataFileSPECT.hh  iEventCT.hh  iEventHistoCT.hh  iEventHistoPET.hh  iEventHistoSPECT.hh  iEventListCT.hh  iEventListPET.hh  iEventListSPECT.hh  iEventNorm.hh  iEventPET.hh  iEventSPECT.hh  oDynamicDataManager.hh  oMemoryMapped.hh  vDataFile.hh  vEvent.hh
BPET_castor_v3.1.1/include/dynamic/: i1TCModel.hh  iDynamicModelTemplate.hh  iLinearModel.hh  iLinearModelTemplate.hh  iLinearPatlakModel.hh  iLinearSpectralModel.hh  oArterialInputCurve.hh  oDynamicModelManager.hh  vDynamicModel.hh
BPET_castor_v3.1.1/include/image/: iDeformationRigid.hh  iDeformationTemplate.hh  iImageConvolverStationaryGaussian.hh  iImageConvolverStationaryIsotropicGaussian.hh  iImageConvolverTemplate.hh  iImageProcessingTemplate.hh  oDeformationManager.hh  oImageConvolverManager.hh  oImageDimensionsAndQuantification.hh  oImageProcessingManager.hh  oImageSpace.hh  oInterfileIO.hh  vDeformation.hh  vImageConvolver.hh  vImageProcessingModule.hh
BPET_castor_v3.1.1/include/management/: doxygen_mainpage.hh  gDataConversionUtilities.hh  gOptions.hh  gVariables.hh  oCASToRConfig.hh.in  oDirentWin32.hh  sAddonManager.hh  sChronoManager.hh  sOutputManager.hh  sRandomNumberGenerator.hh
BPET_castor_v3.1.1/include/optimizer/: iOptimizerBSREM.hh  iOptimizerLandweber.hh  iOptimizerMLEM.hh  iOptimizerMLTR.hh  iOptimizerModifiedEMForMRFPenalizedML.hh  iOptimizerNEGML.hh  iOptimizerOneStepLate.hh  iOptimizerOriginalAML.hh  iOptimizerPenalizedPreconditionedGradientML.hh  iOptimizerTemplate.hh  iPenaltyMarkovRandomField.hh  iPenaltyMedianRootPrior.hh  iPenaltyTemplate.hh  oOptimizerManager.hh  vOptimizer.hh  vPenalty.hh
BPET_castor_v3.1.1/include/projector/: iProjectorClassicSiddon.hh  iProjectorDistanceDriven.hh  iProjectorIncrementalSiddon.hh  iProjectorIncrementalSiddonMulti.hh  iProjectorJoseph.hh  iProjectorTemplate.hh  oProjectionLine.hh  oProjectorManager.hh  oSystemMatrix.hh  vProjector.hh
BPET_castor_v3.1.1/include/scanner/: iScannerCT.hh  iScannerPET.hh  iScannerSPECTConv.hh  oMatrix.hh  sScannerManager.hh  vScanner.hh
BPET_castor_v3.1.1/src/algorithm/: iIterativeAlgorithm.cc  iRCPGSAlgorithm.cc  oSensitivityGenerator.cc  vAlgorithm.cc
BPET_castor_v3.1.1/src/datafile/: iDataFileCT.cc  iDataFilePET.cc  iDataFileSPECT.cc  iEventCT.cc  iEventHistoCT.cc  iEventHistoPET.cc  iEventHistoSPECT.cc  iEventListCT.cc  iEventListPET.cc  iEventListSPECT.cc  iEventNorm.cc  iEventPET.cc  iEventSPECT.cc  oDynamicDataManager.cc  oMemoryMapped.cc  vDataFile.cc  vEvent.cc
BPET_castor_v3.1.1/src/dynamic/: i1TCModel.cc  iDynamicModelTemplate.cc  iLinearModel.cc  iLinearModelTemplate.cc  iLinearPatlakModel.cc  iLinearSpectralModel.cc  oArterialInputCurve.cc  oDynamicModelManager.cc  vDynamicModel.cc
BPET_castor_v3.1.1/src/image/: iDeformationRigid.cc  iDeformationTemplate.cc  iImageConvolverStationaryGaussian.cc  iImageConvolverStationaryIsotropicGaussian.cc  iImageConvolverTemplate.cc  iImageProcessingTemplate.cc  oDeformationManager.cc  oImageConvolverManager.cc  oImageDimensionsAndQuantification.cc  oImageProcessingManager.cc  oImageSpace.cc  oInterfileIO.cc  vDeformation.cc  vImageConvolver.cc  vImageProcessingModule.cc
BPET_castor_v3.1.1/src/management/: gDataConversionUtilities.cc  gOptions.cc  sAddonManager.cc  sChronoManager.cc  sOutputManager.cc  sRandomNumberGenerator.cc
BPET_castor_v3.1.1/src/optimizer/: iOptimizerBSREM.cc  iOptimizerLandweber.cc  iOptimizerMLEM.cc  iOptimizerMLTR.cc  iOptimizerModifiedEMForMRFPenalizedML.cc  iOptimizerNEGML.cc  iOptimizerOneStepLate.cc  iOptimizerOriginalAML.cc  iOptimizerPenalizedPreconditionedGradientML.cc  iOptimizerTemplate.cc  iPenaltyMarkovRandomField.cc  iPenaltyMedianRootPrior.cc  iPenaltyTemplate.cc  oOptimizerManager.cc  vOptimizer.cc  vPenalty.cc
BPET_castor_v3.1.1/src/projector/: iProjectorClassicSiddon.cc  iProjectorDistanceDriven.cc  iProjectorIncrementalSiddon.cc  iProjectorIncrementalSiddonMulti.cc  iProjectorJoseph.cc  iProjectorTemplate.cc  oProjectionLine.cc  oProjectorManager.cc  oSystemMatrix.cc  vProjector.cc
BPET_castor_v3.1.1/src/scanner/: iScannerCT.cc  iScannerPET.cc  iScannerSPECTConv.cc  oMatrix.cc  sScannerManager.cc  vScanner.cc
BPET_castor_v3.1.1/toolkits/: castor-GATEMacToGeom.cc  castor-GATERootToCastor.cc  castor-PetScannerLutEx.cc  castor-PetScannerLutEx_BPET.cc  castor-PetScannerLutEx_orig.cc  castor-datafileConversionEx.cc  castor-datafileConversionEx_BPET.cc  castor-datafileExplorer.cc  castor-datafileShuffler.cc  castor-imageDynamicTools.cc  castor-scannerLUTExplorer.cc  castor-txtConversionCrystalsID.cc  castor-txtConversionCrystalsID_BPET.cc
HiRezBrainPET_castor_first_results/: runmpi_2024Derenzo_win1.bat  things2do.md
HiRezBrainPET_castor_first_results/Release/: data_conversion_to_castor.bat  lut_compiler.bat  lut_explorer.bat  txt_id_conversion.bat
HiRezBrainPET_castor_first_results/python/: LoadSave_TimeLORs.py  (+4 more)
(+116 files in other folders)
